21 February 2008: Wouter
	- speedup of root-delegation message encoding by 15%.

20 February 2008: Wouter
	- setup speec_cache for need-ldns-testns in dotests.
	- check number of queued replies on incoming queries to avoid overload
	  on that account.
	- fptr whitelist checks are not disabled in optimize mode.
	- do-daemonize config file option.
	- minievent time share initializes time at start.
	- updated testdata for nsec3 new algorithm numbers (6, 7).
	- small performance test of packet encoding (root delegation).

19 February 2008: Wouter
	- applied patch to unbound-host man page from Jan-Piet Mens.
	- fix donotquery-localhost: yes default (it erroneously was switched
	  to default 'no').
	- time is only gotten once and the value is shared across unbound.
	- unittest cleans up crypto, so that it has no memory leaks.
	- mini_event shares the time value with unbound this results in 
	  +3% speed for cache responses and +9% for recursions.
	- ldns tarball update with new NSEC3 sign code numbers.
	- perform several reads per UDP operation. This improves performance
	  in DoS conditions, and costs very little in normal conditions.
	  improves cache response +50%, and recursions +10%.
	- modified asynclook test. because the callback from async is not
	  in any sort of lock (and thus can use all library functions freely),
	  this causes a tiny race condition window when the last lock is 
	  released for a callback and a new cancel() for that callback.
	  The only way to remove this is by putting callbacks into some 
	  lock window. I'd rather have the small possibility of a callback
	  for a cancelled function then no use of library functions in 
	  callbacks. Could be possible to only outlaw process(), wait(),
	  cancel() from callbacks, by adding another lock, but I'd rather not.

18 February 2008: Wouter
	- patch to unbound-host from Jan-Piet Mens.
	- unbound host prints errors if fails to configure context.